@@ -59,6 +59,13 @@
 #C
 #connection_logging
 
+# connect_relog SECONDS:
+# How often to relog the connection.
+# For use in conjunction with POP and IMAP before SMTP.
+# If zero, then the connection will not be reloged.
+# (default 300)
+#connect_relog 300
+
 # c|client_server_specification:
 # Allow USER of the form
 # user<delimiter>server[:port] to
